--- a/templates/admin_template.html
+++ b/templates/admin_template.html
@@ -17,6 +17,9 @@
         <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'technical' %}">Registro técnicos</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'incidence' %}">Registro incidencia</a>
                 </li>
             </ul>
