--- a/templates/incidence.html
+++ b/templates/incidence.html
@@ -8,61 +8,64 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="javascript:void(0)">Logo sistema</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="mynavbar">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'incidence' %}">Registro incidencia</a>
-                </li>
-            </ul>
-        </div>
+
+{% extends template %}
+
+{% block content %}
+    <div class="container mt-3">
+        {% if message and type %}
+            <div class="alert alert-{{ type }}" role="alert">
+                {{ message }}
+            </div>
+        {% endif %}
+        <h2>Registro de incidencia</h2>
+        <form class="form-signin" action="/login/storeIncidence/" method="POST">
+            {% csrf_token %}
+            <div class="mb-3 mt-3">
+                <label for="email">Correo electrónico:</label>
+                <input type="email" class="form-control" id="email" placeholder="Ingrese correo electrónico"
+                       name="email"
+                       required>
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="name">Nombres:</label>
+                <input type="text" class="form-control" id="name" placeholder="Ingrese nombres" name="name" required>
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="document">Cédula:</label>
+                <input type="text" class="form-control" id="document" placeholder="Ingrese cédula" name="document"
+                       required>
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="address">Dirección:</label>
+                <input type="text" class="form-control" id="address" placeholder="Ingrese dirección" name="address"
+                       required>
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="phone">Teléfono:</label>
+                <input type="text" class="form-control" id="phone" placeholder="Ingrese teléfono" name="phone" required>
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="detail">Detalle del problema:</label>
+                <textarea class="form-control" id="phone" placeholder="Ingrese detaille" name="detail"
+                          required></textarea>
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="technical">Técnico:</label>
+                <select class="form-select form-select mb-3" aria-label=".form-select example" id="technical"
+                        name="technical" required>
+                    <option value="" selected>Seleccione un técnico</option>
+                    {% for opt in technicals %}
+                        <option value={{ opt }}>
+                            {{ opt }}
+                        </option>
+                    {% endfor %}
+                </select>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Guardar</button>
+        </form>
     </div>
-</nav>
-<div class="container mt-3">
-    <h2>Registro de incidencia</h2>
-    <form class="form-signin" action="/login/storeIncidence/" method="POST">
-        {% csrf_token %}
-        <div class="mb-3 mt-3">
-            <label for="email">Correo electrónico:</label>
-            <input type="email" class="form-control" id="email" placeholder="Ingrese correo electrónico" name="email">
-        </div>
-        <div class="mb-3 mt-3">
-            <label for="name">Nombres:</label>
-            <input type="text" class="form-control" id="name" placeholder="Ingrese nombres" name="name">
-        </div>
-        <div class="mb-3 mt-3">
-            <label for="document">Cédula:</label>
-            <input type="text" class="form-control" id="document" placeholder="Ingrese cédula" name="document">
-        </div>
-        <div class="mb-3 mt-3">
-            <label for="address">Dirección:</label>
-            <input type="text" class="form-control" id="address" placeholder="Ingrese dirección" name="address">
-        </div>
-        <div class="mb-3 mt-3">
-            <label for="phone">Teléfono:</label>
-            <input type="text" class="form-control" id="phone" placeholder="Ingrese teléfono" name="phone">
-        </div>
-        <div class="mb-3 mt-3">
-            <label for="detail">Detalle del problema:</label>
-            <textarea class="form-control" id="phone" placeholder="Ingrese detaille" name="detail"></textarea>
-        </div>
-        <div class="mb-3 mt-3">
-            <label for="technical">Técnico:</label>
-            <select class="form-select form-select mb-3" aria-label=".form-select example" id="technical" name="technical">
-                <option selected>Open this select menu</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-            </select>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Guardar</button>
-    </form>
-</div>
+{% endblock %}
 </body>
 </html>
 
