--- a/templates/incidence.html
+++ b/templates/incidence.html
@@ -47,7 +47,7 @@
             </div>
             <div class="mb-3 mt-3">
                 <label for="detail">Detalle del problema:</label>
-                <textarea class="form-control" id="phone" placeholder="Ingrese detaille" name="detail"
+                <textarea class="form-control" id="phone" placeholder="Ingrese detalle" name="detail"
                           required></textarea>
             </div>
             <div class="mb-3 mt-3">
