--- a/templates/login.html
+++ b/templates/login.html
@@ -62,11 +62,11 @@
         {% csrf_token %}
         <div class="{{errorclass}}" role="alert">{{error}}</div>
       <img class="rounded-circle" src="https://avatars2.githubusercontent.com/u/62926183?s=460&u=e560f6297c81982fc2b554f3c997ec878421fa80&v=4" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Sign In</h1>
-      <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="" name="email">
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="" name="password">
+      <h1 class="h3 mb-3 font-weight-normal">Inicio de sesión</h1>
+      <label for="inputEmail" class="sr-only">Correo elctrónico</label>
+      <input type="email" id="inputEmail" class="form-control" placeholder="Correo elctrónico" required="" autofocus="" name="email">
+      <label for="inputPassword" class="sr-only">Contraseña</label>
+      <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required="" name="password">
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
 </body></html>
