--- a/templates/templates/admin_template.html
+++ b/templates/templates/admin_template.html
@@ -11,9 +11,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="javascript:void(0)">Logo sistema</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
@@ -22,8 +19,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'incidence' %}">Registro incidencia</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'index.order' num=1 %}">Ordenes pendientes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'index.order' num=2 %}">Ordenes en progreso</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'index.order' num=3 %}">Ordenes terminadas</a>
+                </li>
             </ul>
         </div>
+        <a class="navbar-brand" href="{% url 'login' %}">Salir</a>
     </div>
 </nav>
 {% block content %}   {% endblock %}
