--- a/templates/order/index.html
+++ b/templates/order/index.html
@@ -50,6 +50,7 @@
                     {% endif %}
                     <td>
                         {% if num != 3 %}
+<!--                        style="background: green !important"-->
                             <a href={% url 'edit.order' code=opt.code num=num %} class="btn btn-primary btn-sm">
                             Editar
                             </a>
