--- a/templates/technical.html
+++ b/templates/technical.html
@@ -30,7 +30,7 @@
             <div class="mb-3 mt-3">
                 <label for="identify">Identificación:</label>
                 <input type="text" class="form-control" id="identify" placeholder="Ingrese identificación"
-                       name="identify"
+                       name="identify" minlength="10"
                        required>
             </div>
             <div class="mb-3 mt-3">
@@ -42,7 +42,7 @@
             <div class="mb-3 mt-3">
                 <label for="password">contraseña:</label>
                 <input type="password" class="form-control" id="password" placeholder="Ingrese contraseña"
-                       name="password"
+                       name="password" minlength="6"
                        required>
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Guardar</button>
