--- a/templates/templates/admin_template.html
+++ b/templates/templates/admin_template.html
@@ -14,6 +14,9 @@
         <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'settings' %}">Configuraciones</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'technical' %}">Registro técnicos</a>
                 </li>
                 <li class="nav-item">
